<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2x"
    tools:context="com.example.vuhung.rxmoviehung.View.TrailerActivity"
    android:weightSum="5"
    android:gravity="top">

    <TextView
        android:fontFamily="@font/open_sans_bold"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:id="@+id/tv_title_film_trailer"
        android:background="@color/orange"
        android:text="TITLE"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:scrollHorizontally="true"/>
    <View
        android:background="@color/white"
        android:id="@+id/view4"
        android:alpha="0.5"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/img_film_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title2_film_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans"
                        android:text="Tiêu đề:"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_views_film_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:maxLines="2"
                        android:text="Lượt xem:"
                        android:textColor="#fea64f"
                        android:textSize="13sp"
                        android:textStyle="italic" />
                </LinearLayout>


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_genres_film_trailer"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/genres"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            />

                        <TextView
                            android:id="@+id/tv_actor_film_trailer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/actor"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                           />

                        <TextView
                            android:id="@+id/tv_director_film_trailer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/director"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_manufacture_film_trailer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/manufacture"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_duration_film_trailer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thoi_luong_phim"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            />

                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView

                        android:id="@+id/img_like_film_trailer"
                        android:layout_width="20dp"
                        android:layout_height="17.5dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="7dp"
                        android:fontFamily="@font/open_sans"
                        app:srcCompat="@drawable/ic_like2x"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/tv_like_film_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/open_sans"
                        android:text="Thích"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="5.5"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_view_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="37dp"
                android:fontFamily="@font/open_sans"
                android:gravity="right"
                android:text="@string/xem_them"
                android:textColor="#fea64f"
                android:textSize="13sp"
                android:textStyle="italic" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="29dp"
                android:layout_weight="4"
                android:alpha="0.4"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/open_sans"
                android:text="XEM TRAILER"
                android:textColor="@color/orange" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_above="@+id/tv_view_more"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/tv_description_film_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="3"
                    android:text="MO ta"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </ScrollView>


        </RelativeLayout>

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5" />
    </LinearLayout>

</LinearLayout>